<resources>
    <string name="MAIN_AD_UNIT_ID">ca-app-pub-2231528705144312/6655162184</string>
    <string name="ARTICLE_AD_UNIT_ID">ca-app-pub-2231528705144312/4065818981</string>
    <string name="COMMENTS_AD_UNIT_ID">ca-app-pub-2231528705144312/7019285382</string>
    <string name="DOWNLOADINGS_AD_UNIT_ID">ca-app-pub-2231528705144312/8496018582</string>
    <string name="TWO_PANE_AD_UNIT_ID">ca-app-pub-2231528705144312/7818128982</string>
    <string name="AD_UNIT_ID_FULL_SCREEN">ca-app-pub-2231528705144312/2398213784</string>
    <string name="app_name">Однако</string>
    <string name="article">Статья</string>
    <string name="articles">Статьи</string>
    <string name="title">Заголовок</string>
    <string name="date">Дата</string>
    <string name="preview">Краткое содержание</string>
    <string name="author">Автор</string>
    <string name="authors">Авторы</string>
    <string name="category">Категория</string>
    <string name="categories">Категории</string>
    <string name="tags">Теги:</string>
    <string name="also_by_theme">Также по теме "ТЕМА":</string>
    <string name="also_to_read">Также смотрите:</string>
    <string name="mark_as_read">Отметить прочитанной</string>
    <string name="mark_as_unread">Отметить НЕ прочитанной</string>
    <string name="mark_as_read_unread">Отметить прочитанной/ НЕ прочитанной</string>
    <string name="share_link">Поделиться ссылкой</string>
    <string name="share_article">Поделиться статьёй</string>
    <string name="show_comments">Читать комментарии</string>
    <string name="speek_aloud">Прочесть вслух</string>
    <string name="zero">0</string>
    <string name="action_settings">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="num_of_comms">Количество комментариев</string>
    <string name="num_of_shares">Количество поделившихся</string>
    <string name="author_descr">Об авторе</string>
    <string name="arts_list">Список статей</string>
    <string name="design">Внешний вид</string>
    <string name="refresh">Обновить</string>
    <string name="comments">Комментарии</string>
    <string name="downloads">Загрузки</string>
    <string name="crash_toast_text">Отчёт об ошибке отправлен разработчику</string>
    <string name="favs_log_pass_title">Введите логин и пароль для сохранения избранного на сервере. \n Так вы сможете восстановить избранное на другом устройстве или после удаления файлов приложения</string>
    <string name="hint_login">логин (например НяшМяш)</string>
    <string name="hint_password">пароль (например 12345)</string>
    <string name="service_db">Работа с базой данных статей</string>
    <string name="service_rss">Обновление даты и краткого содержания статей</string>
    <string name="service_article">Загрузка текста статей</string>
    <string name="service_comments">Загрузка комментариев</string>
    <string name="service_tts">Озвучивание статей</string>
    <string name="check_new">Поиск новых статей</string>
    <string name="auto_load">Автозагрузка статей</string>
    <string name="hello_world">Hello world!</string>
    <string name="go_pro">Однако+</string>
    <string name="go_pro_title">Преимущества полной версии</string>
    <string name="go_pro_buy">Купить за 99р</string>
    <string name="download">Загрузить</string>
    <string name="close">Закрыть</string>
    <string name="more_actions">Дополнительные действия</string>
    <string name="get_art_text">Поделиться текстом статьи</string>
    <string name="download_article">Загрузить статью</string>
    <string name="search_author">Поиск автора</string>
    <string name="search">Поиск</string>
    <string name="share">Поделиться</string>
    <string name="notifications_settings">Настройки уведомлений</string>
    <string name="notifications">Уведомления</string>
    <string name="notifications_period">Периодичность уведомлений</string>
    <string name="vibration">Вибрация</string>
    <string name="sound">Звук</string>
    <string name="system_settings">Системные настройки</string>
    <string name="about">О приложении</string>
    <string name="quontity">Количество</string>
    <string name="on">Включено</string>
    <string name="off">Выключено</string>
    <string name="night_mode">Ночной режим</string>
    <string name="text_size_warning">Изменения вступят в силу после поворота экрана!</string>
    <string name="text_size">Размер текста</string>
    <string name="text_size_summary">Размер текста интерфейса, карточек статей, самих статей и комментариев</string>
    <string name="text_size_ui">Размер текста интерфейса</string>
    <string name="text_size_article">Размер  текста в статьях</string>
    <string name="text_size_comments">Размер  текста комментариев</string>
    <string name="divider_vertical">|</string>
    <string name="img">картинка</string>
    <string name="sending_app">Отправлено из приложения \"Однако. Новости и Аналитика\" для Android.</string>
    <string name="name">Имя</string>
    <string name="fio">Фамилия Имя Отчество</string>
    <string name="email">example@kuchanov.ru</string>
    <string name="feature_login">Когда-нибудь разработчик разберётся как залогиниться на сайте через приложение и тут будет ваша автатарка, ваши ФИО и ваш логин. И вы сможете комментировать статьи через приложение! =)</string>
    <string name="loading">Загружаю, подождите, пожалуйста.</string>
    <string name="article_loading">Тут появится текст статьи, когда она загрузится!</string>
    <string name="never">Никогда</string>
    <string name="delete_saved_arts">Удалить загруженные статьи</string>
    <string name="db_drop">Очистить базу данных</string>
    <string name="clear_db_summary">Стереть загруженные статьи, полная очистка БД</string>
    <string name="image_cache_title">Кэш изображений</string>
    <string name="image_cache_summary">Размер, местоположение и очистка</string>
    <string name="clear_cache_title">Очистить кэш изображений</string>
    <string name="debug">debug</string>
    <string name="favorites">Избранное</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="favs_about">Избранное работает так: \n
        -авторы, статьи и разделы сохраняются в памяти телефона в защищённой папке приложения \n
        -добавлять можно так: авторы и разделы добавляются из верхнего правого меню, если открыт список статей автора или раздела. Также вы можете добавить автора в избранное долгим нажатием на его имя в списке статей. Статьи добавляются либо из меню (3 точки справа от заголовка статьи в списке статей) или из верхнего правого меню в экране чтения статьи. \n
        -удалять из избранного можно нажав крестик справа от избранного в списке избранного.
        -если вы введёте логин и пароль (нажав на иконку карандаша) то сможете сохранить избранное на сервере свайпом вниз (либо нажав на иконку обновления сверху карандаша) \n
        -сохранив избранное на сервере вы сможете в любой момент и на любом устройстве загрузить их (введя ваши логин/пароль и выбрав вариант загрузить с сервера)  \n
        -В Однако+ версии ограничений на количество авторов, разделов и статей нет! В обычной версии можно хранить по 1 автору и разделу и до 3 статей.</string>
    <string-array name="entries">
        <item>30</item>
        <item>60</item>
        <item>90</item>
    </string-array>
    <string-array name="entry_values">
        <item>30</item>
        <item>60</item>
        <item>90</item>
    </string-array>
    <string-array name="theme">
        <item>Серая (стандартная)</item>
        <item>Индиго (синяя)</item>
        <item>Красная (только в полной версии)</item>
        <item>Сине-зелёная (только в полной версии)</item>
        <item>Зелёная (только в полной версии)</item>
        <item>Янтарная (только в полной версии)</item>
    </string-array>
    <string-array name="theme_values">
        <item>grey</item>
        <item>indigo</item>
        <item>red</item>
        <item>teal</item>
        <item>green</item>
        <item>amber</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="settings_title">Настройки</string>
    <string name="mail_to_me_summary">Написать чего-нибудь разработчику по e-mail. Например: \"Молодец, отличная программа!\" или \"Мне в приложении не хватает такой-то функции, добавьте пожалуйста!\"</string>
    <string name="pro_ver_adv">
<![CDATA[•неограниченные возможности оф-лайн чтения!<br/>
		•никаких ограничений на добавление в \"Избранное\"<br/>
        •ещё 4 цветовых темы приложения!<br/>
        •больше никакой рекламы!<br/>
        •благодарность разработчика!<br/>
        •и самое главное: Вы получите моральное удовлетворение от вклада в развитие IT сектора российской экономики! =)]]>
    </string>
    <string name="version_history_summary">Увлекательная и поучительная история развития приложения от первого релиза до нынешнего состояния.</string>
    <string name="two_pane_alert">
<![CDATA[На данный момент планшетный режим находится в тестовой режиме.<br/><br/>
        По независящим от разработчика причинам (по крайней мере так думает сам разработчик), при быстром перелистывании категорий статей экраны статей (те, что справа) не хотят перерисовываться...<br/>
        Разработчик потратил множество унылых часов на попытки заставить всё это работать как должно, но потерпел неудачу.<br/>
        В будущем планшетный режим будет или таки окончательно исправлен, либо переделан в смысле архитектуры.<br/><br/>
        В данный момент он работает нормально, если листать категории неторопясь. А перерисовка статей достигается поворотом экрана.]]>
    </string>
    <string-array name="contacts">
        <item>
<![CDATA[<p><strong>Вконтакте:</strong><br/>
        •<a href=\"https://vk.com/odnako_android\">Группа приложения</a><br/>
        <br/>
        •<a href=\"https://vk.com/odnako_org\">Группа сайта</a>
        <br/><br/>
        <strong>Google+:</strong><br/>
        •<a href=\"https://plus.google.com/u/0/communities/118261515338041960622\">Группа для альфа- и бета-тестирования</a><br/><br/>
        <strong>GitHub:</strong><br/>
        •<a href=\"https://github.com/mohaxspb/Odnako\">Репозиторий с кодом приложения</a>
        <br/><br/></p>]]>
        </item>
        <item>
<![CDATA[<p>
        <strong>Почта:</strong><br/>
        •mohax.spb@gmail.com
        <br/><br/></p>]]>
        </item>
        <item>
<![CDATA[<p>
        <strong>Собственно сам сайт:</strong><br/>
        •<a href=\"http://www.odnako.org/\">http://www.odnako.org/</a>
        <br/><br/></p>]]>
        </item>
    </string-array>
    <string name="used_libs_list_title">Список использованных в разработке библиотек</string>
</resources>