<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="ru.kuchanov.odnako.fragments.FragmentPreference"
        android:summary="Выбор размера шрифтов, темы"
        android:title="@string/design" >
        <extra
            android:name="pref-resource"
            android:value="pref_design" />
    </header>
    <header
        android:fragment="ru.kuchanov.odnako.fragments.FragmentPreference"
        android:summary="Настройка периодичности, звука, вибрации"
        android:title="@string/notifications" >
        <extra
            android:name="pref-resource"
            android:value="pref_notifications" />
    </header>
    <header
        android:fragment="ru.kuchanov.odnako.fragments.FragmentPreference"
        android:summary="Папка хранения картинок и статей, обновлление при запуске"
        android:title="@string/system_settings" >
        <extra
            android:name="pref-resource"
            android:value="pref_system" />
    </header>
    <header
        android:fragment="ru.kuchanov.odnako.fragments.FragmentPreferenceAbout"
        android:summary="Сслыки на маркет, истроия изменений, связь с разработчиком"
        android:title="@string/about" >
        <extra
            android:name="pref-resource"
            android:value="pref_about" />
    </header>

</preference-headers>