<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_size_ui"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:drawableLeft="?textSizeIcon"
        android:text="@string/text_size_ui" />

    <SeekBar
        android:id="@+id/seekbar_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/text_size_article"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:drawableLeft="?textFormatIcon"
        android:text="@string/text_size_article" />

    <SeekBar
        android:id="@+id/seekbar_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/text_size_comments"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:drawableLeft="?commentsIcon"
        android:text="@string/text_size_comments" />

    <SeekBar
        android:id="@+id/seekbar_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />
    
    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/green"
        android:drawableLeft="?warningIcon"
        android:drawableRight="?warningIcon"
        android:text="@string/text_size_warning" />

</LinearLayout>