<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_settings_all"
        android:icon="?overflowIcon"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="?settingsIcon"
                android:orderInCategory="200"
                android:title="@string/action_settings"
                app:showAsAction="always">
            </item>

            <group
                android:id="@+id/theme"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/theme_dark"
                    android:icon="?themeIcon"
                    android:orderInCategory="220"
                    android:title="@string/night_mode"
                    app:showAsAction="always"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/refresh"
        android:icon="?refreshIcon"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>

</menu>