<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_settings_all"
        android:icon="?overflowIcon"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="?settingsIcon"
                android:orderInCategory="100"
                android:title="@string/action_settings"
                app:showAsAction="always"/>
            <!-- <item
                android:id="@+id/theme"
                android:icon="?themeIcon"
                android:orderInCategory="110"
                android:title="@string/theme">
                <menu>
                    <group android:checkableBehavior="single" >
                        <item
                            android:id="@+id/theme_ligth"
                            android:orderInCategory="520"
                            android:title="@string/light"/>
                        <item
                            android:id="@+id/theme_dark"
                            android:orderInCategory="530"
                            android:title="@string/dark"/>
                    </group>
                </menu>
            </item> -->
            <group
                android:id="@+id/theme"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/theme_dark"
                    android:icon="?themeIcon"
                    android:orderInCategory="220"
                    android:title="@string/night_mode"
                    app:showAsAction="always"/>
            </group>
        </menu>
        
    </item>
    <item
        android:id="@+id/comments"
        android:icon="?commentsIcon"
        android:orderInCategory="100"
        android:title="@string/comments"
        app:showAsAction="always"/>
    <item
        android:id="@+id/share"
        android:orderInCategory="110"
        android:icon="?shareIcon"
        android:title="@string/share"
        app:showAsAction="always"/>
<!-- android:actionProviderClass="android.widget.ShareActionProvider" -->
</menu>