<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_lin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorPrimary"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ava_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/img"
            android:scaleType="fitXY"
            android:src="?favoriteStarIcon" />

        <TextView
            android:id="@+id/label"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/favorites"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/info"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/img"
            android:scaleType="fitXY"
            android:src="?aboutIcon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/texts_lin"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sincked"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/fio"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/refresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/img"
                    android:scaleType="fitXY"
                    android:src="?refreshIcon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/login"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/email"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="21sp" />

                <ImageView
                    android:id="@+id/edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/img"
                    android:scaleType="fitXY"
                    android:src="?createIcon" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ru.kuchanov.odnako.custom.view.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="?colorPrimaryDark"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true" >

                <TextView
                    android:id="@+id/go_pro_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:padding="3dp"
                    android:text="@string/go_pro"
                    android:textColor="@color/black"
                    android:textSize="23sp" />
            </ru.kuchanov.odnako.custom.view.MaterialRippleLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>