<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkable="true"
        android:focusable="false"
        card_view:cardBackgroundColor="?cardBackGroundColor"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="3dp" >

        <LinearLayout
            android:id="@+id/category_mian_lin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/category_top_lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/category_img"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/hello_world"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/top_img_cover"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/img"
                    android:scaleType="fitXY"
                    android:src="?coverTopToBottom" />

                <TextView
                    android:id="@+id/category_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="7dp"
                    android:text="@string/title"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/category_card_bottom_lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/category_description"
                    android:layout_width="0dip"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:textColor="?android:textColorPrimary" />

                <ImageView
                    android:id="@+id/more_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/hello_world"
                    android:scaleType="fitXY" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>